tests/baselines/reference/pathsValidation4.errors.txt
tsconfig.json(6,11): error TS5061: Pattern '@interface/**/*' can have at most one '*' character.
tsconfig.json(7,11): error TS5061: Pattern '@service/**/*' can have at most one '*' character.
tsconfig.json(7,29): error TS5062: Substitution './src/service/**/*' in pattern '@service/**/*' can have at most one '*' character.
src/main.ts(1,8): error TS2882: Cannot find module or type declarations for side-effect import of 'someModule'.


==== tsconfig.json (3 errors) ====
    {
        "compilerOptions": {
            "traceResolution": true,
            "baseUrl": "./src",
            "paths": {
              "@interface/**/*" : ["./src/interface/*"],
              ~~~~~~~~~~~~~~~~~
!!! error TS5061: Pattern '@interface/**/*' can have at most one '*' character.
              "@service/**/*": ["./src/service/**/*"],
              ~~~~~~~~~~~~~~~
!!! error TS5061: Pattern '@service/**/*' can have at most one '*' character.
                                ~~~~~~~~~~~~~~~~~~~~
!!! error TS5062: Substitution './src/service/**/*' in pattern '@service/**/*' can have at most one '*' character.
              "@controller/*": ["controller/*"],
            }
        }
    }
    
==== src/main.ts (1 errors) ====
    import 'someModule';
           ~~~~~~~~~~~~
!!! error TS2882: Cannot find module or type declarations for side-effect import of 'someModule'.